Closed Bug 1486558 Opened 6 years ago Closed 6 years ago

Tooltips timeouting is wrong on page

Categories

(Core :: DOM: Navigation, defect, P2)

61 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox61 --- wontfix
firefox62 --- wontfix
firefox63 --- wontfix
firefox64 --- fixed

People

(Reporter: uzivatel919, Assigned: emilio)

References

(Blocks 1 open bug)

Details

(Keywords: parity-chrome, parity-edge)

Attachments

(1 file)

Opera, Edge, IE browsers do this well. 

A. Open page http://www.ochranaprirody.cz/lokality/?idmzchu=1142.
B. Try to show tooltips for points of interest on the map. (You shall get tooltips only for first 2 then you have to use magic to obtain tooltips moreover.)

Tooltips somehow are set with wrong timeout or similar.

Tooltips are shown with no limits. No magic needed.
Edge and Chrome have no issue.
Component: General → Layout
Product: Firefox → Core
This is technically docshell code. I can try to take a look.
Status: UNCONFIRMED → NEW
Component: Layout → Document Navigation
Ever confirmed: true
Assignee: nobody → emilio
This page is changing the title attribute on an ancestor while we move the mouse
around in a canvas.

Our code assumes that given we've moved the mouse around and hid the tooltip we
shouldn't show it again until the next mouseout.

Instead of keeping track of whether we've already shown the tooltip, keep track
of the last used tooltip string, and avoid showing the tooltip again in the
callback if it's the same.
Priority: -- → P2
Comment on attachment 9004548 [details]
Handle title changes on ancestors without a mouseout in between.

Neil Deakin has approved the revision.
Attachment #9004548 - Flags: review+
Pushed by emilio@crisal.io:
https://hg.mozilla.org/integration/autoland/rev/a56e2ed44746
Handle title changes on ancestors without a mouseout in between. r=NeilDeakin
https://hg.mozilla.org/mozilla-central/rev/a56e2ed44746
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Blocks: 1492717
Is this worth uplifting to beta?
It's not a recent regression whatsoever, so I'd say it's ok letting it ride the trains.
Flags: needinfo?(emilio)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: