Bug 1486558 - Handle title changes on ancestors without a mouseout in between. r=NeilDeakin

This page is changing the title attribute on an ancestor while we move the mouse
around in a canvas.

Our code assumes that given we've moved the mouse around and hid the tooltip we
shouldn't show it again until the next mouseout.

Instead of keeping track of whether we've already shown the tooltip, keep track
of the last used tooltip string, and avoid showing the tooltip again in the
callback if it's the same.

Differential Revision: https://phabricator.services.mozilla.com/D4443